objects/Tender__c.object
<CustomObject>
    <description>Represents a tender (Call for Tenders) with title, deadline, criteria, and documents.Tracks tender status and deadlines; supports document attachments.</description>
    <fields>
        <fullName>Ceiling_Fund__c</fullName>
        <label>Ceiling Fund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Core_Team_Requirements__c</fullName>
        <label>Core Team Requirements</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>131070</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualifying_Criteria__c</fullName>
        <label>Qualifying Criteria</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Under Evaluation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tender_ID__c</fullName>
        <externalId>true</externalId>
        <label>Tender ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tender</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>